have support manager put the snapshot in a subdir under rhq-downloads and return the https URL to it.